--- a/main.tex
+++ b/main.tex
@@ -102,22 +102,25 @@
         \newpage
         \input{04_transformada_fourier/main.tex}
         \newpage
-        \input{05_muestreo/main.tex}
+        \input{05_ecuaciones_diferenciales_en_diferencias/main.tex}
         \newpage
-        \input{06_dft/main.tex}
+        \input{06_muestreo/main.tex}
         \newpage
-        \input{07_z_laplace/main.tex}
+        \input{07_dft/main.tex}
         \newpage
-        \input{08_filtros/main.tex}
+        \input{08_z_laplace/main.tex}
+        % \newpage
+        % \input{09_filtros/main.tex}
     }
     \or \input{01_señales/main.tex}
     \or \input{02_sistemas/main.tex}
     \or \input{03_series_fourier/main.tex}
     \or \input{04_transformada_fourier/main.tex}
-    \or \input{05_muestreo/main.tex}
-    \or \input{06_dft/main.tex}
-    \or \input{07_z_laplace/main.tex}
-    \or \input{08_filtros/main.tex}
+    \or \input{05_ecuaciones_diferenciales_en_diferencias/main.tex}
+    \or \input{06_muestreo/main.tex}
+    \or \input{07_dft/main.tex}
+    \or \input{08_z_laplace/main.tex}
+    \or \input{09_filtros/main.tex}
     \else UNIDAD TEMÁTICA NO SELECCIONADA!!
 \fi
 
